--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ beautifulsoup4==4.12.2
 Django==3.2
 django-bootstrap-v5==1.0.11
 djangorestframework==3.14.0
+gunicorn==20.1.0
 python-environ==0.4.54
 pytz==2023.3
 soupsieve==2.4
 sqlparse==0.4.3
+whitenoise==6.4.0
